# DevOpsDebugger

./: .env.example  vercel.json
Backend/: README.md  env  main.py  pyproject.toml  requirements.txt
Backend/app/: __init__.py  main.py
Backend/app/agents/: evaluator.py  non_devops.py  retriever.py  search.py  synthesizer.py  validator.py  workflow.py
Backend/app/api/: __init__.py  analytics.py  analytics_charts.py  auth.py  chat.py  docs.py  routes.py  users.py
Backend/app/core/: __init__.py  analytics.py  auth.py  config.py  logging.py  middleware.py  vector_store.py
Backend/app/data/: db.json
Backend/app/llm/: llm.py
Backend/app/mcp/: __init__.py  google_mcp.py
Backend/app/state/: state.py  state_manager.py
Frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/components/Analytics/: CardComponents.tsx  ChartComponents.tsx  UserHistoryView.tsx
Frontend/src/components/Chat/: AgentFlow.tsx  AgentTimeline.tsx  ChatInput.tsx  ChatMessages.tsx  Message.tsx  SourcesDisplay.tsx
Frontend/src/components/Common/: Button.tsx  Input.tsx  Modal.tsx  Toast.tsx
Frontend/src/components/Documents/: DocumentSearch.tsx  (+1 more)
Frontend/src/hooks/: useAnalytics.ts  useChat.ts  useDocuments.ts  useUserHistory.ts
Frontend/src/pages/: SettingsPage.tsx
Frontend/src/services/: api.ts  constants.ts  websocket.ts
Frontend/src/stores/: authStore.ts  chatStore.ts
Frontend/src/types/: auth.ts  chat.ts
api/: fastapi_server.py  requirements.txt
(+8 files in other folders)
